crates/maki-rules/tests/snapshots/gritql_full_integration_test__parser_simple_node.snap
---
source: crates/maki-rules/tests/gritql_full_integration_test.rs
expression: result.unwrap()
---
NodeKind: profile
