crates/maki-rules/tests/snapshots/gritql_full_integration_test__predicate_field_exists.snap
---
source: crates/maki-rules/tests/gritql_full_integration_test.rs
expression: "format!(\"{:?}\", pattern)"
---
"Where(NodeKind(\"profile\"), FieldExists(\"description\"))"
